@@ -15,7 +15,6 @@ package io.trino.plugin.prometheus;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.Lists;
 import io.airlift.json.JsonCodec;
 import io.trino.spi.HostAddress;
 import io.trino.spi.connector.ColumnHandle;
@@ -127,7 +126,7 @@ public class TestPrometheusSplit
         ConnectorSplitSource splits = splitManager.getSplits(
                 null,
                 null,
-                new PrometheusTableHandle("default", table.getName()),
+                new PrometheusTableHandle("default", table.name()),
                 (DynamicFilter) null,
                 Constraint.alwaysTrue());
         PrometheusSplit split = (PrometheusSplit) splits.getNextBatch(1).getNow(null).getSplits().get(0);
@@ -151,7 +150,7 @@ public class TestPrometheusSplit
         ConnectorSplitSource splits = splitManager.getSplits(
                 null,
                 null,
-                new PrometheusTableHandle("default", table.getName()),
+                new PrometheusTableHandle("default", table.name()),
                 (DynamicFilter) null,
                 Constraint.alwaysTrue());
         PrometheusSplit split = (PrometheusSplit) splits.getNextBatch(1).getNow(null).getSplits().get(0);
@@ -175,7 +174,7 @@ public class TestPrometheusSplit
         ConnectorSplitSource splitsMaybe = splitManager.getSplits(
                 null,
                 null,
-                new PrometheusTableHandle("default", table.getName()),
+                new PrometheusTableHandle("default", table.name()),
                 (DynamicFilter) null,
                 Constraint.alwaysTrue());
         List<ConnectorSplit> splits = splitsMaybe.getNextBatch(NUMBER_MORE_THAN_EXPECTED_NUMBER_SPLITS).getNow(null).getSplits();
@@ -200,7 +199,7 @@ public class TestPrometheusSplit
         ConnectorSplitSource splits = splitManager.getSplits(
                 null,
                 null,
-                new PrometheusTableHandle("default", table.getName()),
+                new PrometheusTableHandle("default", table.name()),
                 (DynamicFilter) null,
                 Constraint.alwaysTrue());
         PrometheusSplit split1 = (PrometheusSplit) splits.getNextBatch(1).getNow(null).getSplits().get(0);
@@ -358,9 +357,9 @@ public class TestPrometheusSplit
 
         TemporalAmount expectedMaxQueryAsTime = java.time.Duration.ofMillis(maxQueryRangeDuration.toMillis() +
                 ((splitTimes.size() - 1) * OFFSET_MILLIS));
-        String lastSplit = splitTimes.get(splitTimes.size() - 1);
+        String lastSplit = splitTimes.getLast();
         Instant lastSplitAsTime = ofEpochMilli(longFromDecimalSecondString(lastSplit));
-        String earliestSplit = splitTimes.get(0);
+        String earliestSplit = splitTimes.getFirst();
         Instant earliestSplitAsTime = ofEpochMilli(longFromDecimalSecondString(earliestSplit));
         TemporalAmount queryChunkAsTime = java.time.Duration.ofMillis(queryChunkSizeDuration.toMillis());
         java.time.Duration actualMaxDuration = Duration.between(earliestSplitAsTime
@@ -392,9 +391,9 @@ public class TestPrometheusSplit
 
         TemporalAmount expectedMaxQueryAsTime = java.time.Duration.ofMillis(new io.airlift.units.Duration(10, TimeUnit.MINUTES).toMillis() +
                 ((splitTimes.size() - 1) * OFFSET_MILLIS));
-        String lastSplit = splitTimes.get(splitTimes.size() - 1);
+        String lastSplit = splitTimes.getLast();
         Instant lastSplitAsTime = ofEpochMilli(longFromDecimalSecondString(lastSplit));
-        String earliestSplit = splitTimes.get(0);
+        String earliestSplit = splitTimes.getFirst();
         Instant earliestSplitAsTime = ofEpochMilli(longFromDecimalSecondString(earliestSplit));
         TemporalAmount queryChunkAsTime = java.time.Duration.ofMillis(queryChunkSizeDuration.toMillis());
         java.time.Duration actualMaxDuration = Duration.between(earliestSplitAsTime
@@ -433,7 +432,7 @@ public class TestPrometheusSplit
      */
     private static List<String> mockPrometheusResponseToChunkedQueries(io.airlift.units.Duration queryChunkDuration, List<String> splitTimes)
     {
-        return Lists.reverse(splitTimes).stream()
+        return splitTimes.reversed().stream()
                 .map(endTime -> mockPrometheusResponseToQuery(queryChunkDuration, endTime))
                 .flatMap(Collection::stream)
                 .sorted()
